# memBlocks

./: .dockerignore  .env.example  .gitignore  Dockerfile.ollama  MERGE_PLAN.md  README.md  SETUP_GUIDE.md  chat_pipeline_v1.py  config.py  create_qdrant_collection.py  docker-compose.yml  embeddings.py  gemini_model_list.py  groq_extraction_model.py  hybrid_qdrant_retrieval.py  insert_qdrant_memories.py  main.py  migration-guide.md  opencode.json  original_main.tex  pipeline_v1.py  projectDescription.md  prompts.py  pyproject.toml  refactoring-plan.md  requirements.txt  skills-lock.json  todo.md
backend/: .env.example  QUICKSTART.md  README.md  ReadMe.md  __init__.py  dependencies.py  main.py  pyproject.toml  start.sh
backend/models/: __init__.py  requests.py
backend/routers/: __init__.py  blocks.py  chat.py  memory.py  users.py
backend/src/api/: __init__.py  dependencies.py  main.py
backend/src/api/models/: __init__.py  requests.py
backend/src/api/routers/: __init__.py  auth.py  blocks.py  chat.py  memory.py  transparency.py  users.py
backend/src/cli/: __init__.py  main.py
mcp_server/: MCP_CLI_SETUP.md  README.md  cli.py  pyproject.toml  server.py  state.py
mcp_server/tests/: test_cli_resources.py  test_store_background_tools.py
memblocks_lib/: pyproject.toml  test_cohere_reranker.py
memblocks_lib/docs/: 01_SETUP_GUIDE.md  02_METHODS_AND_INTERFACES.md  03_TECHNICAL_OVERVIEW.md
memblocks_lib/src/memblocks/: __init__.py  client.py  config.py
memblocks_lib/src/memblocks/llm/: __init__.py  base.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openrouter_provider.py  task_settings.py
memblocks_lib/src/memblocks/logger/: __init__.py
memblocks_lib/src/memblocks/models/: __init__.py  block.py  llm_outputs.py  memory.py  retrieval.py  transparency.py  units.py
memblocks_lib/src/memblocks/prompts/: __init__.py
memblocks_lib/src/memblocks/services/: __init__.py  block.py  block_manager.py  chat_engine.py  core_memory.py  memory_pipeline.py  reranker.py  semantic_memory.py  session.py  session_manager.py  transparency.py  user_manager.py
memblocks_lib/src/memblocks/storage/: __init__.py  embeddings.py  mongo.py  (+1 more)
(+137 files in other folders)
