[project]
name = "memblocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-otel>=0.7.0",
    "arize[autoembeddings]>=8.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "groq>=1.0.0",
    "openinference-instrumentation-langchain>=0.1.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "sniffio>=1.3.1",
    "uvicorn>=0.41.0",
]
