[project]
name = "memblocks-backend"
version = "0.1.0"
description = "FastAPI backend and CLI for memBlocks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "memblocks",
]

[project.scripts]
memblocks = "backend.src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
