[project]
name = "memblocks-mcp"
version = "0.1.0"
description = "MCP server that exposes MemBlocks memory tools to AI agents via stdio"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "memblocks",
]

[project.scripts]
memblocks-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
